--- a/controllers/templates/api_docs.tmpl
+++ b/controllers/templates/api_docs.tmpl
@@ -755,8 +755,7 @@
                         name='{{ index $p "name" }}' value='{{ index $p "default" }}'>
 
                                 </td>
-                                <td><input class="form-control" type="text" 
-                        name='{{ index $p "name" }}' value='{{ index $p "default" }}'></td>
+                                <td>{{ index $p "default" }}</td>
                                 <td>{{ index $p "description" }}</td>
                             </tr>
                             
