--- a/web-controllers/templates/layout/layout_section/sidebar.html
+++ b/web-controllers/templates/layout/layout_section/sidebar.html
@@ -1,7 +1,7 @@
 <div class="col-xs-6 col-sm-3 sidebar-offcanvas pull-right" id="sidebar">
     <div class="list-group">
         <a href="/" class="list-group-item">首页</a>
-        <a href="/" class="list-group-item">列表</a>
+        <a href="/item/list" class="list-group-item">列表</a>
         <a href="http://localhost:8088" class="list-group-item">系统管理</a>
     </div>
 </div><!--/.sidebar-offcanvas-->
