--- a/web-controllers/templates/layout/layout_section/header.html
+++ b/web-controllers/templates/layout/layout_section/header.html
@@ -13,6 +13,8 @@
 <!-- Custom styles for this template -->
 <link href="/static/css/offcanvas.css" rel="stylesheet">
 <link href="/static/jquery-ui-1.10.4/css/ui-lightness/jquery-ui-1.10.4.min.css" rel="stylesheet">
+<link rel="stylesheet" href="/static/toast_message/jquery.toastmessage.css">
+
 <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE 9]>
 <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
